cluster/apps/flux-system/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    # traefik + certs
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"

    coredns.io/hostname: &host "flux-receiver.${SECRET_DOMAIN}"

    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: *host
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: flux-receiver-tls
